--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -9,13 +9,22 @@
     font-family: var(--font-family);
   }
 
-  .container{
+  body{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--color-grey-3);
+  }
+  a{
+    text-decoration: none;
+  }
+
+  .wrapper{
+    width: 90%;
+    max-width: 700px;
+    height: auto;
   }
   
   :root {
