--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -45,7 +45,7 @@ input[type="text"]:focus ~ label, input[type="text"]:valid ~ label{
     color: var(--color-brand-3);
 }
 
-input[type="time"], input[type="date"] {
+input[type="time"], input[type="date"], input[type="number"] {
     width: 100%;
     max-width: 180px;
     padding: 5px;
@@ -60,8 +60,10 @@ input[type="time"], input[type="date"] {
     background-color: var(--color-grey-4);
     outline: 0;
 }
-
-input[type="time"]:focus, input[type="date"]:focus, input[type="time"]:valid, input[type="date"]:valid{
+input[type="number"]{
+    width: 50px;
+}
+input[type="time"]:focus, input[type="date"]:focus, input[type="number"]:focus, input[type="time"]:valid, input[type="date"]:valid, input[type="number"]:valid{
     border: 0;
     border-bottom: 2px solid var(--color-brand-3);
 }
