--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -8,6 +8,9 @@
     height: 100%;
     font-family: var(--font-family);
   }
+  ul{
+    list-style: none;
+  }
 
   body{
     width: 100%;
@@ -31,6 +34,7 @@
   legend{
     width: 80%;
     font-size: 18px;
+    text-align: center;
   }
   
   :root {
