--- a/pages/Relatório/relatorio.css
+++ b/pages/Relatório/relatorio.css
@@ -25,16 +25,32 @@ fieldset.regularDisplay{
 fieldset.diferentDisplay{
     display: flex;
     flex-direction: column;
+    gap: 15px;
     
     border: none;
     width: 90%;
     max-width: 500px;
 }
-
-.inputsRowBox{
+div.inputsRowBox{
     width: 100%;
     display: flex;
-    gap: 25px;    
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;    
+}
+div.inputsRowBox > span{
+    max-width: 9px;
+    margin: 0;
+}
+@media(max-width: 496px) {
+    div.inputsRowBox{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 10px;    
+    }
 }
 div.permanenceTime{
     display: flex;
@@ -50,3 +66,6 @@ div.permanenceTime{
     }
 }
 
+.closeModalRelatorio{
+    padding-top: 25px;
+}
