--- a/styles/modalList.css
+++ b/styles/modalList.css
@@ -30,8 +30,17 @@ div.closeModal{
 ul > li {
     display: block;
     border-bottom: 1px solid var(--color-grey-3);
+    border-radius: 8px;
+    
     width: 100%;
     padding: 5px;
+    cursor: pointer;
+}
+ul > li:hover {
+    display: block;
+    border-bottom: 1px solid var(--color-grey-3);
+    background-color: var(--color-brand-3);
+    color: var(--color-grey-4);
 }
 
 /* modalReports */
